css/scssをwebpackから組み込む仕組みを実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ReactRails</title>
+    <title>KptLogApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= css_load_tag('styles') %>
   </head>
 
   <body>
