KPTLogの新規作成モーダルのデザイン実装

--- a/src/assets/css/kptlog.scss
+++ b/src/assets/css/kptlog.scss
@@ -1,7 +1,7 @@
 .kptlog {
   color: #4F4F4F;
-  margin: 0 400px;
   padding: 24px;
+  width: 600px;
   border: 1px solid #E0E0E0;
   background-color: #ffffff;
 
