--- a/src/assets/css/pannel.scss
+++ b/src/assets/css/pannel.scss
@@ -11,6 +11,7 @@
 
   &__body {
     padding: 16px 16px;
+    width: 100%;
 
     &__item {
       margin-bottom: 24px;
@@ -24,6 +25,11 @@
       &__content {
         color: #828282;
         font-size: 14px;
+      }
+
+      &__form {
+        width: 100%;
+        height: 60px;
       }
     }
   }
