ヘッダー、サイドメニューのレイアウト作成

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,9 +2,33 @@
 @import 'kptLog';
 @import 'modal';
 @import 'button';
+@import 'side-menu';
+
+#root {
+  width: 100%;
+}
 
 body {
   background-color: #F9F9F9;
+  margin: 0px;
+  display: flex;
+}
+
+.container{
+  width: 100%;
+
+  &--header{
+    width: 100%;
+    background-color: #5BADED;
+    color: white;
+    padding: 8px;
+    font-size: 18px;
+    font-weight: 600;
+  }
+
+  &--body{
+    display: flex;
+  }
 }
 
 textarea {
