--- a/src/assets/css/kptlog.scss
+++ b/src/assets/css/kptlog.scss
@@ -1,7 +1,7 @@
 .kptlog {
+  width: 100%;
   color: #4F4F4F;
   padding: 24px;
-  width: 600px;
   border: 1px solid #E0E0E0;
   background-color: #ffffff;
 
@@ -11,7 +11,6 @@
   }
 
   &__body {
-    
     &__item {
 
 
