KPTログの詳細画面のデザイン実装

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -19,7 +19,7 @@ body {
 
   &--header{
     width: 100%;
-    background-color: #5BADED;
+    background-color: rgb(98, 175, 235);
     color: white;
     padding: 8px;
     font-size: 18px;
