--- a/src/assets/css/kpt-log.scss
+++ b/src/assets/css/kpt-log.scss
@@ -11,9 +11,10 @@
     margin: 0;
 
     &--title {
-      padding: 8px 24px;
+      color: #4F4F4F;
+      padding: 16px 24px;
       line-height: 32px;
-      font-size: 16px;
+      font-size: 18px;
     }
 
     &--item {
