--- a/src/assets/css/pannel.scss
+++ b/src/assets/css/pannel.scss
@@ -1,35 +1,46 @@
+
 .pannel {
   margin-bottom: 24px;
   border: 1px solid #e2e2e2;
   border-radius: 4px;
+  width: 600px;
 
-  &__header {
-    padding: 8px 16px;
-    border-bottom: 1px solid #e2e2e2;
-    background-color: #F6F7F9;
+  &__keep {
+    @extend .pannel;
+    background: #6BBED5;
+    border: 1px solid #6BBED5;
+    color: #FFFFFF;
   }
 
-  &__body {
-    padding: 16px 16px;
-    width: 100%;
+  &__problem {
+    @extend .pannel;
+    background: #E38692;
+    border: 1px solid #E38692;
+    color: #FFFFFF;
+  }
 
-    &__item {
+  &__try {
+    @extend .pannel;
+    background: #CFE283;
+    border: 1px solid #CFE283;
+    color: #FFFFFF;
+  }
+
+  &--header {
+    padding: 8px 16px;
+  }
+
+  &--body {
+    padding: 16px 16px;
+    background-color: #FFFFFF;
+    border-radius: 0 0 4px 4px;
+
+    &--item {
       margin-bottom: 24px;
 
-      &__title {
+      &--content {
         color: #4F4F4F;
-        font-size: 16px;
-        margin-bottom: 8px;
-      }
-
-      &__content {
-        color: #828282;
         font-size: 14px;
-      }
-
-      &__form {
-        width: 100%;
-        height: 60px;
       }
     }
   }
