material-iconを使えるようにした

--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,4 +1,5 @@
 <div id="root"></div>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <script type="text/javascript">
  window.csrfToken = <%= raw form_authenticity_token.to_json %>
 </script>
