--- a/src/assets/css/side-menu.scss
+++ b/src/assets/css/side-menu.scss
@@ -20,5 +20,13 @@
     &:hover{
       background-color: #ccc
     }
+
+    i.material-icons {
+      color: #4F4F4F;
+      font-size: 18px;
+      vertical-align: text-bottom;
+      margin-right: 8px;
+      line-height: 16px;
+    }
   }
 }
